--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "license": "ISC",
   "dependencies": {
     "express": "^4.17.1",
-    "mongoose": "^6.1.0"
+    "mongoose": "^6.1.0",
+    "uuid": "^8.3.2"
   }
 }
