--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "express": "^4.17.1",
     "mongoose": "^6.1.0",
+    "nodemon": "^2.0.15",
     "uuid": "^8.3.2"
   }
 }
