Correctif mineur + test gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -6,7 +6,7 @@ yarn-debug.log*
 yarn-error.log*
 lerna-debug.log*
 
-# Fichier de configuration de la connxion à la bdd
+# Fichier de configuration de la connexion à la bdd
 config.js
 
 # Diagnostic reports (https://nodejs.org/api/report.html)
